--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "anon-message-board",
   "version": "1.0.0",
   "description": "ITV Tech Test",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "devstart": "nodemon index.js",
+    "devstart": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "SundeepK",
