--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "anon-message-board",
   "version": "1.0.0",
   "description": "ITV Tech Test",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "devstart": "nodemon server.js",
+    "devstart": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "SundeepK",
@@ -14,6 +14,8 @@
     "joi": "^17.9.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22"
   }
 }
