--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "src/server.js",
   "scripts": {
     "devstart": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest .*test.js",
+    "start": "node src/server.js"
   },
   "author": "SundeepK",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "joi": "^17.9.2"
+    "joi": "^17.9.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
